--- a/Themes/default/skins/index.firefox.css
+++ b/Themes/default/skins/index.firefox.css
@@ -4,3 +4,7 @@ input[type=submit], input[type=button]
 
 input.submit
 	padding-left: 21px
+
+// Firefox doesn't support 'position: relative' on a table cell, unlike other browsers.
+table.thought_list td > div
+	position: relative
