--- a/Themes/default/skins/index.ie6.css
+++ b/Themes/default/skins/index.ie6.css
@@ -325,6 +325,15 @@ input.submit
 input.cancel
 	background-position: 0 100px
 
+#thought_form input.save
+	background-position: -99px -99px
+
+.thought_actions
+	display: none
+
+table.thought_list td:hover .thought_actions
+	display: inline-block
+
 // IE6 needs inline-block to be reset to inline separately... How annoying.
 .inline-block
 	display: inline
