--- a/Themes/default/skins/index.ie7.css
+++ b/Themes/default/skins/index.ie7.css
@@ -189,6 +189,12 @@ input.cancel
 #thought_form input[type=submit]
 	background-position: -99px -99px
 
+.thought_actions
+	display: none
+
+table.thought_list td:hover .thought_actions
+	display: inline-block
+
 // IE7 needs inline-block to be reset to inline separately... How annoying.
 .inline-block
 	display: inline
