--- a/Themes/default/skins/index.ie8.css
+++ b/Themes/default/skins/index.ie8.css
@@ -31,6 +31,12 @@ input.submit
 #thought_form input[type=submit]
 	background-position: -99px -99px
 
+.thought_actions
+	display: none
+
+table.thought_list td:hover .thought_actions
+	display: inline-block
+
 .postheader
 	display: block
 
